[gd_scene format=3 uid="uid://modes-screen"]

[ext_resource path="res://scripts/ModesScreen.gd" type="Script" id=1]
[ext_resource path="res://scripts/UIButtonFeedback.gd" type="Script" id=2]

[node name="ModesScreen" type="Control"]
script = ExtResource( 1 )
anchors_preset = 15

[node name="Background" type="ColorRect" parent="ModesScreen"]
anchors_preset = 15
color = Color(0.03, 0.08, 0.12)

[node name="Content" type="Panel" parent="ModesScreen"]
anchors_preset = 5
margin_left = 80
margin_right = -80
margin_top = 160
margin_bottom = -160

[node name="VBox" type="VBoxContainer" parent="Content"]
anchors_preset = 15
margin_left = 24
margin_top = 24
margin_right = -24
margin_bottom = -24
separation = 16

[node name="Title" type="Label" parent="VBox"]
text = "Choose a Mode"
align = 1

[node name="Status" type="Label" parent="VBox"]
align = 1
text = "Mode: Classic"

[node name="ModeList" type="GridContainer" parent="VBox"]
columns = 2
custom_constants/separation = 14

[node name="ClassicButton" type="Button" parent="ModeList"]
script = ExtResource( 2 )
text = "Classic"

[node name="TimedButton" type="Button" parent="ModeList"]
script = ExtResource( 2 )
text = "Timed"

[node name="MovesButton" type="Button" parent="ModeList"]
script = ExtResource( 2 )
text = "Moves"

[node name="ChallengeButton" type="Button" parent="ModeList"]
script = ExtResource( 2 )
text = "Challenge"

[node name="Description" type="Label" parent="VBox"]
align = 0
text = "Match every pair with calm focus."

[node name="BackButton" type="Button" parent="VBox"]
script = ExtResource( 2 )
text = "Back to Menu"

[connection signal="pressed" from="BackButton" to="." method="_on_back"]
